unpackaged/main/default/objects/Supplier_Buildings__c/Supplier_Buildings__c.object-meta.xml
<CustomObject>
    <label>Supplier Buildings</label>
    <nameField>
        <label>Supplier Buildings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Buildings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>