unpackaged/main/default/objects/Supplier_Buildings__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <inlineHelpText>Street name and number - for example 10, Main Street</inlineHelpText>
    <label>Address Line 1</label>
    <type>TextArea</type>
</CustomField>