unpackaged/main/default/objects/Supplier_Buildings__c/fields/Apartment_Overview__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Overview__c</fullName>
    <label>Apartment Overview</label>
    <length>13172</length>
    <type>LongTextArea</type>
</CustomField>