unpackaged/main/default/objects/Supplier_Buildings__c/fields/Building_LIVE__c.field-meta.xml
<CustomField>
    <fullName>Building_LIVE__c</fullName>
    <label>Building LIVE! Date</label>
    <type>Date</type>
</CustomField>