unpackaged/main/default/objects/Supplier_Buildings__c/fields/Building_Location__c.field-meta.xml
<CustomField>
    <fullName>Building_Location__c</fullName>
    <label>Building Location</label>
    <scale>12</scale>
    <type>Location</type>
</CustomField>