unpackaged/main/default/objects/Supplier_Buildings__c/fields/Building_Public_ID__c.field-meta.xml
<CustomField>
    <fullName>Building_Public_ID__c</fullName>
    <label>Building Public ID</label>
    <type>TextArea</type>
</CustomField>