unpackaged/main/default/objects/Supplier_Buildings__c/fields/Building_Stage__c.field-meta.xml
<CustomField>
    <fullName>Building_Stage__c</fullName>
    <label>Building Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Manual Upload/Waiting for Supplier</fullName>
            </value>
            <value>
                <fullName>Missing Information</fullName>
            </value>
            <value>
                <fullName>Missing Copy</fullName>
            </value>
            <value>
                <fullName>Copy Completed/Final Review</fullName>
            </value>
            <value>
                <fullName>Visible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>