unpackaged/main/default/objects/Supplier_Buildings__c/fields/BuildingID__c.field-meta.xml
<CustomField>
    <fullName>BuildingID__c</fullName>
    <externalId>true</externalId>
    <label>BuildingID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>