unpackaged/main/default/objects/Supplier_Buildings__c/fields/Created_Internally__c.field-meta.xml
<CustomField>
    <fullName>Created_Internally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Internally</label>
    <type>Checkbox</type>
</CustomField>