unpackaged/main/default/objects/Supplier_Buildings__c/fields/Four_Bed_Plus_Total__c.field-meta.xml
<CustomField>
    <fullName>Four_Bed_Plus_Total__c</fullName>
    <label>Four Bed Plus Total</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>