unpackaged/main/default/objects/Supplier_Buildings__c/fields/Gas_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Gas_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gas Certificate</label>
    <type>Checkbox</type>
</CustomField>