unpackaged/main/default/objects/Supplier_Buildings__c/fields/Gas_Certificate_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Gas_Certificate_Expiry_Date__c</fullName>
    <label>Gas Certificate Expiry Date</label>
    <type>Date</type>
</CustomField>