unpackaged/main/default/objects/Supplier_Buildings__c/fields/Information_Missing__c.field-meta.xml
<CustomField>
    <fullName>Information_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Information Missing</label>
    <type>Checkbox</type>
</CustomField>