unpackaged/main/default/objects/Supplier_Buildings__c/fields/Is_Gas_Applicable_in_This_Building__c.field-meta.xml
<CustomField>
    <fullName>Is_Gas_Applicable_in_This_Building__c</fullName>
    <label>Is Gas Applicable in This Building</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>