unpackaged/main/default/objects/Supplier_Buildings__c/fields/Live_Availability__c.field-meta.xml
<CustomField>
    <fullName>Live_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live Availability</label>
    <type>Checkbox</type>
</CustomField>