unpackaged/main/default/objects/Supplier_Buildings__c/fields/Live_Availability_Date_checked__c.field-meta.xml
<CustomField>
    <fullName>Live_Availability_Date_checked__c</fullName>
    <label>Live Availability Date checked</label>
    <type>Date</type>
</CustomField>