unpackaged/main/default/objects/Supplier_Buildings__c/fields/Location_Overview__c.field-meta.xml
<CustomField>
    <fullName>Location_Overview__c</fullName>
    <label>Location Overview</label>
    <length>13072</length>
    <type>LongTextArea</type>
</CustomField>