unpackaged/main/default/objects/Supplier_Buildings__c/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <label>Main Contact</label>
    <type>Email</type>
</CustomField>