unpackaged/main/default/objects/Supplier_Buildings__c/fields/Manual_Upload__c.field-meta.xml
<CustomField>
    <fullName>Manual_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This filed defines that supplier building is manually uploaded by the SCM Team.</description>
    <label>Manual Upload</label>
    <type>Checkbox</type>
</CustomField>