unpackaged/main/default/objects/Supplier_Buildings__c/fields/Map_Link__c.field-meta.xml
<CustomField>
    <fullName>Map_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://maps.google.com/maps?f=q&amp;hl=en&amp;q=&quot;&amp; Address_Line_1__c &amp;&quot; ,+ &quot;&amp;Town_City__c&amp;&quot; ,+ &quot;&amp;Country__c&amp; &quot;&amp;om=1&quot;, IMAGE(&quot;servlet/servlet.FileDownload?file=015P000000075lz&quot;, &quot;Map Link&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Link</label>
    <type>Text</type>
</CustomField>