unpackaged/main/default/objects/Supplier_Buildings__c/fields/No_Auto_Emails__c.field-meta.xml
<CustomField>
    <fullName>No_Auto_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Auto Emails</label>
    <type>Checkbox</type>
</CustomField>