unpackaged/main/default/objects/Supplier_Buildings__c/fields/Number_of_Studios__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Studios__c</fullName>
    <label>Studios Total</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>