unpackaged/main/default/objects/Supplier_Buildings__c/fields/PL_Insurance__c.field-meta.xml
<CustomField>
    <fullName>PL_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PL Insurance</label>
    <type>Checkbox</type>
</CustomField>