unpackaged/main/default/objects/Supplier_Buildings__c/fields/PL_Insurance_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>PL_Insurance_Expiry_Date__c</fullName>
    <label>PL Insurance Expiry Date</label>
    <type>Date</type>
</CustomField>