unpackaged/main/default/objects/Supplier_Buildings__c/fields/Rate_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_Expiry_Date__c</fullName>
    <label>Rate Expiry Date</label>
    <type>Date</type>
</CustomField>