unpackaged/main/default/objects/Supplier_Buildings__c/fields/SITU_Listing__c.field-meta.xml
<CustomField>
    <fullName>SITU_Listing__c</fullName>
    <label>SITU Listing</label>
    <type>Url</type>
</CustomField>