unpackaged/main/default/objects/Supplier_Buildings__c/fields/Supplier_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Accounts__c</fullName>
    <label>Supplier Accounts</label>
    <referenceTo>Supplier_Accounts__c</referenceTo>
    <relationshipLabel>Supplier Buildings</relationshipLabel>
    <relationshipName>Supplier_Buildings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>