unpackaged/main/default/objects/Supplier_Buildings__c/fields/Supplier_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contacts</label>
    <referenceTo>Supplier_Contacts__c</referenceTo>
    <relationshipLabel>Supplier Buildings</relationshipLabel>
    <relationshipName>Supplier_Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>