unpackaged/main/default/objects/Supplier_Buildings__c/fields/Supplier_Portal_Upload__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Portal_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field defines that the building is uploaded via the Supplier Portal.</description>
    <label>Supplier Portal Upload</label>
    <type>Checkbox</type>
</CustomField>