unpackaged/main/default/objects/Supplier_Buildings__c/fields/Supplier_Website_Listing__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Website_Listing__c</fullName>
    <label>Supplier Website Listing</label>
    <type>Url</type>
</CustomField>