unpackaged/main/default/objects/Supplier_Buildings__c/fields/Total_Unapproved__c.field-meta.xml
<CustomField>
    <fullName>Total_Unapproved__c</fullName>
    <label>Total Unapproved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>