unpackaged/main/default/objects/Supplier_Buildings__c/fields/Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Units__c</fullName>
    <formula>One_Bed_Total__c  +  Number_of_Studios__c  +  Two_Bed_Total__c  +  Three_Bed_Total__c  +  Four_Bed_Plus_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>