unpackaged/main/default/objects/Supplier_Buildings__c/fields/Town_City__c.field-meta.xml
<CustomField>
    <fullName>Town_City__c</fullName>
    <inlineHelpText>Which postal town or city</inlineHelpText>
    <label>Town / City</label>
    <type>TextArea</type>
</CustomField>