unpackaged/main/default/objects/Supplier_Buildings__c/fields/Two_Bed_Total__c.field-meta.xml
<CustomField>
    <fullName>Two_Bed_Total__c</fullName>
    <label>Two Bed Total</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>