unpackaged/main/default/objects/Supplier_Buildings__c/fields/Unit_Size__c.field-meta.xml
<CustomField>
    <fullName>Unit_Size__c</fullName>
    <label>Unit Size</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Size</valueSetName>
    </valueSet>
</CustomField>