unpackaged/main/default/objects/Supplier_Buildings__c/fields/Unit_Size_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Unit_Size_Text_Field__c</fullName>
    <label>Unit Size</label>
    <type>TextArea</type>
</CustomField>