unpackaged/main/default/objects/Supplier_Buildings__c/fields/Visible_on_Website_Date_Checked__c.field-meta.xml
<CustomField>
    <fullName>Visible_on_Website_Date_Checked__c</fullName>
    <label>Visible on Website Date Checked</label>
    <type>Date</type>
</CustomField>