unpackaged/main/default/objects/Supplier_Buildings__c/fields/Visited_On__c.field-meta.xml
<CustomField>
    <fullName>Visited_On__c</fullName>
    <label>Visited On</label>
    <type>Date</type>
</CustomField>