unpackaged/main/default/objects/Supplier_Buildings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Supplier_Accounts__c</columns>
    <columns>NAME</columns>
    <columns>Town_City__c</columns>
    <columns>Country__c</columns>
    <columns>Zip_Postal_Code__c</columns>
    <columns>Map_Link__c</columns>
    <columns>Live_Availability__c</columns>
    <columns>Number_of_Studios__c</columns>
    <columns>One_Bed_Total__c</columns>
    <columns>Two_Bed_Total__c</columns>
    <columns>Three_Bed_Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>