unpackaged/main/default/objects/Supplier_Buildings__c/listViews/Unqualified_Published.listView-meta.xml
<ListView>
    <fullName>Unqualified_Published</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Building_Stage__c</field>
        <operation>equals</operation>
        <value>Visible</value>
    </filters>
    <label>Unqualified Published</label>
</ListView>